@@ -256,4 +256,8 @@ Security fixes:
 - Removed grape.set_password_with_service_ticket
 - Downloads are now also protected
 
+New features:
+- Added functions: grape.current_session_id and grape.current_username
+
+
 
